feat: add category delete route and sms interface
